@@ -11,6 +11,8 @@
 [sites]
 ; IMDB server to use.
 imdbsite = "akas.imdb.com"
+; Tell IMDB which is the preferred language (e.g. en-US, de-DE, pt-BR)
+;language = 
 ; fallback to IMDB for missing data: 0=NO_ACCESS, 1=BASIC_ACCESS, 2=MEDIUM_ACCESS, 9=FULL_ACCESS
 pilot_imdbfill = 0
 
